# zk-wormhole

frontend/: .gitignore  package.json  tree.json  tsconfig.json
frontend/chain/: chain.cfg  genesis.json
frontend/src/: server.ts
frontend/views/: create_address.ejs  index.ejs
verifier/: Cargo.toml
verifier/src/: lib.rs
wormhole/: output.txt
wormhole/host/: Cargo.toml
wormhole/host/src/: lib.rs  main.rs
wormhole/methods/guest/: Cargo.toml
wormhole/methods/guest/src/: main.rs
