[package]
name = "verifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
risc0-zkvm = { version = "0.19.1" }
methods = { path = "../wormhole/methods" }
libc = "*"

[lib]
name = "verifier"
crate-type = ["cdylib"]
