[package]
name = "wormhole"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = { version = "0.19.1", default-features = false }
tiny-keccak = { version = "2.0.0", features = ["keccak"] }